--- a/sample/src/main/res/layout/activity_main_recycler.xml
+++ b/sample/src/main/res/layout/activity_main_recycler.xml
@@ -29,7 +29,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/actionbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
         </com.andexert.library.RippleView>
 
     </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <com.andexert.library.RippleView
         android:id="@+id/rect"
@@ -110,7 +110,7 @@
 
     </com.andexert.library.RippleView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@+id/rect"
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
